Add C++ object detection example
Because it's not obvious. It also wouldn't hurt to add a link to this from the coral examples page (where the python object detection is already linked).

--- a/coral/examples/BUILD
+++ b/coral/examples/BUILD
@@ -76,6 +76,22 @@ cc_binary(
 )
 
 cc_binary(
+    name = "detect_image",
+    srcs = ["detect_image.cc"],
+    deps = [
+        ":file_utils",
+        "//coral:tflite_utils",
+        "//coral/detection:adapter",
+        "@com_google_absl//absl/flags:flag",
+        "@com_google_absl//absl/flags:parse",
+        "@glog",
+        "@libedgetpu//tflite/public:oss_edgetpu_direct_all",  # buildcleaner: keep
+        "@org_tensorflow//tensorflow/lite:framework",
+        "@org_tensorflow//tensorflow/lite/c:common",
+    ],
+)
+
+cc_binary(
     name = "backprop_last_layer",
     srcs = ["backprop_last_layer.cc"],
     deps = [
