--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/windows/servercore:1903
 SHELL ["powershell", "-command"]
 
-ARG BAZEL_VERSION=4.0.0
+ARG BAZEL_VERSION=6.1.0
 # Install Bazel
 ADD https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-windows-x86_64.exe c:/windows/system32/bazel.exe
 
@@ -21,7 +21,7 @@ RUN setx /M PATH $($Env:PATH + ';C:\Program Files\7-Zip')
 ARG MSYS_BASE_REPO=http://repo.msys2.org/distrib/x86_64
 
 # Install msys2
-ARG MSYS_VERSION=20200602
+ARG MSYS_VERSION=20240113
 ADD ${MSYS_BASE_REPO}/msys2-base-x86_64-${MSYS_VERSION}.tar.xz c:/windows/temp
 RUN 7z.exe x c:\windows\temp\msys2-base-x86_64-$env:MSYS_VERSION.tar.xz
 RUN 7z.exe x c:\msys2-base-x86_64-$env:MSYS_VERSION.tar -o"c:\\"
@@ -36,16 +36,18 @@ RUN 7z.exe x c:\windows\temp\patch-$env:PATCH_VERSION-x86_64.pkg.tar.xz
 RUN 7z.exe x c:\patch-$env:PATCH_VERSION-x86_64.pkg.tar -o"c:\\msys64"
 
 # Install vim (for xxd)
-ARG VIM_VERSION=8.2.0592-1
+ARG VIM_VERSION=VIM_VERSION=9.1.0000-1
 ADD ${MSYS_PACKAGE_REPO}/vim-${VIM_VERSION}-x86_64.pkg.tar.xz c:/windows/temp
-RUN 7z.exe x -y c:\windows\temp\vim-$env:VIM_VERSION-x86_64.pkg.tar.xz
+RUN 7z.exe x -y c:\windows\temp\vim-$env:VIM_VERSION-x86_64.pkg.tar.zst
 RUN 7z.exe x -y c:\vim-$env:VIM_VERSION-x86_64.pkg.tar -o"c:\\msys64"
 
 RUN choco install -m -y python3 --version=3.5.4
 RUN choco install -m -y python3 --version=3.6.8
 RUN choco install -m -y python3 --version=3.7.9
 RUN choco install -m -y python3 --version=3.8.10
-RUN choco install -m -y python3 --version=3.9.5
+RUN choco install -m -y python3 --version=3.9.13
+RUN choco install -m -y python3 --version=3.10.11
+RUN choco install -m -y python3 --version=3.11.8
 
 RUN c:\python35\python.exe -m pip install --upgrade pip
 RUN c:\python35\python.exe -m pip install numpy six pillow wheel
@@ -62,7 +64,13 @@ RUN c:\python38\python.exe -m pip install numpy six pillow wheel
 RUN c:\python39\python.exe -m pip install --upgrade pip
 RUN c:\python39\python.exe -m pip install numpy six pillow wheel
 
+RUN c:\python310\python.exe -m pip install --upgrade pip
+RUN c:\python310\python.exe -m pip install numpy six pillow wheel
+
+RUN c:\python311\python.exe -m pip install --upgrade pip
+RUN c:\python311\python.exe -m pip install numpy six pillow wheel
+
 # Install libusb release package
-ARG LIBUSB_VERSION=1.0.24
+ARG LIBUSB_VERSION=1.0.27
 ADD https://github.com/libusb/libusb/releases/download/v${LIBUSB_VERSION}/libusb-${LIBUSB_VERSION}.7z c:/windows/temp
 RUN 7z x -oc:\libusb c:\windows\temp\libusb-$env:LIBUSB_VERSION.7z
