--- a/.bazelrc
+++ b/.bazelrc
@@ -7,8 +7,9 @@ build --enable_platform_specific_config
 
 build:linux --crosstool_top=@crosstool//:toolchains
 build:linux --compiler=gcc
+build:linux --cxxopt=-std=c++17
 
-build:macos --cxxopt=-std=c++14
+build:macos --cxxopt=-std=c++17
 
 build:windows --incompatible_restrict_string_escapes=false
 build:windows --cxxopt=/std:c++latest
