Temporarily use fork of libedgetpu with initial support for TF2.16.
Stable libedgetpu only supports TF2.15.0. It will be reverted back to the official repo once that has been updated to TF2.16.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libedgetpu"]
   path = libedgetpu
-  url = https://github.com/google-coral/libedgetpu
+  url = https://github.com/feranick/libedgetpu
 [submodule "test_data"]
   path = test_data
   url = https://github.com/google-coral/test_data
